--- a/front/css/common.css
+++ b/front/css/common.css
@@ -10,9 +10,28 @@ a, a:hover, a:visited { text-decoration:none; }
 ul { list-style:none; }
 table { border-collapse:collapse; border-spacing:0; }
 
-#mobile { display:inline-block; border-radius:20px; background:#000; padding:40px 10px; margin:10px; }
-#screen { position:relative; display:block; margin:0 auto; width:380px; height:600px; background:#fff; }
+.ft0 { font-size:0; }
+.w100 { width:100%; }
 
-
-
+body { padding-top:83px; padding-bottom:43px; }
+#screen { width:100%; display:block; position:relative; }
+#top { position:fixed; top:0; left:0; display:block; width:100%; z-index:100; background:#fff; }
+#top-bar { position:relative; height:43px; border-bottom:1px solid #ddd; }
+#top-nav { position:relative; height:40px; border-bottom:1px solid #ddd; }
+#top-nav > a { display:inline-block; width:33.33%; text-align:center; border-left:1px solid #000; }
+#top-nav > a:first-child { border-left:0; }
+#top-nav > a > span { display:inline-block; font-size:14px; color:#666; height:40px; line-height:39px; font-weight:bold; }
+#top-nav > a.active > span { border-bottom:3px solid red; color:#000; }
+#content { position:relative; }
+#bar { position:fixed; bottom:-41px; left:0; display:block; height:43px; border-top:2px solid red; z-index:100; width:100%; background:#fff; }
+#bar.opened { bottom:0; }
+#bar > a { width:20%; display:inline-block; text-align:center; }
+#barbtn { position:absolute; width:36px; top:-20px; right:5px; z-index:300; cursor:pointer; display:block; }
+#bar > a > img { display:inline-block; height:43px; }
+#btn-nav { position:absolute; left:0; top:0; width:43px; height:43px; }
+#btn-nav > img { position:absolute; left; left:50%; top:50%; transform:translate(-50%, -50%); width:21px; }
+#logo { position:absolute; left:50%; top:50%; transform:translate(-50%, -50%); width:93px; }
+#navbtns { position:absolute; right:8px; top:50%; transform:translateY(-50%); width:53px; }
+.content-tab { display:none; }
+.content-tab.active { display:block; }
 
