--- a/front/css/common.css
+++ b/front/css/common.css
@@ -5,7 +5,7 @@
 /* Reset */
 *, *:after, *:before { -webkit-box-sizing:border-box; box-sizing:border-box; }
 html, body { position:relative; display:block; min-width:100%; min-height:100%; }
-html, body, div, p, span, a, ul, li, input, textarea { margin:0; padding:0; border:0; font-family:'Nanum Gothic', sans-serif; font-size:16px; line-height:1; letter-spacing:0; color:inherit; }
+html, body, div, p, span, a, ul, li, input, textarea { margin:0; padding:0; border:0; font-family:'Nanum Gothic', sans-serif; font-size:15px; line-height:1; letter-spacing:0; color:inherit; }
 a, a:hover, a:visited { text-decoration:none; }
 ul { list-style:none; }
 table { border-collapse:collapse; border-spacing:0; }
@@ -13,20 +13,22 @@ table { border-collapse:collapse; border-spacing:0; }
 .ft0 { font-size:0; }
 .w100 { width:100%; }
 
+::-webkit-scrollbar { display: none; }
 body { padding-top:83px; padding-bottom:43px; }
-#screen { width:100%; display:block; position:relative; }
+#screen { width:100%; height:100%; display:block; position:relative; -webkit-overflow-scrolling:touch; }
+body.drawer { overflow:hidden; }
 #top { position:fixed; top:0; left:0; display:block; width:100%; z-index:100; background:#fff; }
 #top-bar { position:relative; height:43px; border-bottom:1px solid #ddd; }
 #top-nav { position:relative; height:40px; border-bottom:1px solid #ddd; }
 #top-nav > a { display:inline-block; width:33.33%; text-align:center; border-left:1px solid #000; }
 #top-nav > a:first-child { border-left:0; }
 #top-nav > a > span { display:inline-block; font-size:14px; color:#666; height:40px; line-height:39px; font-weight:bold; }
-#top-nav > a.active > span { border-bottom:3px solid red; color:#000; }
+#top-nav > a.active > span { border-bottom:3px solid #c71314; color:#000; }
 #content { position:relative; }
-#bar { position:fixed; bottom:-41px; left:0; display:block; height:43px; border-top:2px solid red; z-index:100; width:100%; background:#fff; }
+#bar { position:fixed; bottom:-41px; left:0; display:block; height:43px; border-top:2px solid #c71314; z-index:500; width:100%; background:#fff; }
 #bar.opened { bottom:0; }
 #bar > a { width:20%; display:inline-block; text-align:center; }
-#barbtn { position:absolute; width:36px; top:-20px; right:5px; z-index:300; cursor:pointer; display:block; }
+#barbtn { position:absolute; width:36px; top:-20px; right:5px; z-index:700; cursor:pointer; display:block; }
 #bar > a > img { display:inline-block; height:43px; }
 #btn-nav { position:absolute; left:0; top:0; width:43px; height:43px; }
 #btn-nav > img { position:absolute; left; left:50%; top:50%; transform:translate(-50%, -50%); width:21px; }
@@ -34,4 +36,18 @@ body { padding-top:83px; padding-bottom:43px; }
 #navbtns { position:absolute; right:8px; top:50%; transform:translateY(-50%); width:53px; }
 .content-tab { display:none; }
 .content-tab.active { display:block; }
+
+#drawer { position:fixed; width:100%; height:100%; display:block; top:0; left:-101%; background:#fff; z-index:400; transition:all 0.12s linear; }
+body.drawer #drawer { left:0; }
+#drawer-left { height:100%; display:inline-block; width:110px; border-right:1px solid #ddd; }
+#drawer-left > a { line-height:43px; width:100%; color:#000; padding:0 13px; display:block; font-size:15px; font-weight:bold; }
+#drawer-left > a.active { background:#c71314; color:#fff; }
+#drawer-top { display:block; height:43px; background:#c71314; position:relative; padding-left:13px; border-bottom:1px solid #fff; }
+#drawer-top > span { line-height:43px; color:#fff; font-weight:bold; font-size:16px; }
+#drawer-top > img { width:60px; position:absolute; right:43px; top:50%; transform:translateY(-50%); }
+#drawer-close { position:absolute; top:0; right:0; width:43px; height:43px; display:block; }
+#drawer-close > img { position:absolute; left:50%; top:50%; transform:translate(-50%, -50%); width:16px; }
+
+
+
 
