--- a/front/css/common.css
+++ b/front/css/common.css
@@ -70,3 +70,4 @@ body.drawer #drawer { left:0; }
 #connect_id { display:block; border:1px solid #ccc; width:100%; padding:5px; margin-bottom:10px; }
 #kpa-submit { display:block; width:100%; text-align:center; background:#c71314; padding:10px; border:0; font-size:14px; color:#fff; font-weight:bold; }
 
+#btn-more { width:100%; display:block; padding:15px; border-bottom:1px solid #ddd; color:#888; text-align:center; margin-bottom:20px; }
