--- a/front/css/common.css
+++ b/front/css/common.css
@@ -20,7 +20,7 @@ body.drawer { overflow:hidden; }
 #top { position:fixed; top:0; left:0; display:block; width:100%; z-index:100; background:#fff; }
 #top-bar { position:relative; height:43px; border-bottom:1px solid #ddd; }
 #top-nav { position:relative; height:40px; border-bottom:1px solid #ddd; }
-#top-nav > a { display:inline-block; width:33.33%; text-align:center; border-left:1px solid #000; }
+#top-nav > a { position:relative; display:inline-block; width:33.33%; text-align:center; border-left:1px solid #000; }
 #top-nav > a:first-child { border-left:0; }
 #top-nav > a > span { display:inline-block; font-size:14px; color:#666; height:40px; line-height:39px; font-weight:bold; }
 #top-nav > a.active > span { border-bottom:3px solid #c71314; color:#000; }
@@ -70,11 +70,12 @@ body.drawer #drawer { left:0; }
 #connect_id { display:block; border:1px solid #ccc; width:100%; padding:5px; margin-bottom:10px; }
 #kpa-submit { display:block; width:100%; text-align:center; background:#c71314; padding:10px; border:0; font-size:14px; color:#fff; font-weight:bold; }
 
-#btn-more { width:100%; display:block; padding:15px; border-bottom:1px solid #ddd; color:#000; text-align:center; margin-bottom:20px; }
+#btn-more { position:relative; width:100%; display:block; padding:15px; border-bottom:1px solid #ddd; color:#000; text-align:center; }
 #proto1 { position:fixed; top:0; left:0; width:100%; height:100%; z-index:700; overflow:scroll; display:none; }
 #proto-0, #proto-1, #proto-2 { display:none; z-index:700; }
 #proto1.active, #proto-0.active, #proto-1.active, #proto-2.active { display:block; }
 
+.highlighted:before { content:''; position:absolute; top:0; left:0; width:100%; height:100%; border:3px solid blue; display:block; background:rgba(0,0,255,.2); }
 
 
 
