--- a/android/app/src/main/res/layout/activity_kpost.xml
+++ b/android/app/src/main/res/layout/activity_kpost.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".KPostActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/firstLayout"
@@ -21,7 +21,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/kp_burger" />
+            android:src="@drawable/kp_burger" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -30,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/kp_navbtns" />
+            android:src="@drawable/kp_navbtns" />
 
         <ImageView
             android:id="@+id/imageView8"
@@ -39,7 +39,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/kp_logo" />
+            android:src="@drawable/kp_logo" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/firstLayout">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnYegum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -94,11 +94,16 @@
             android:orientation="vertical" >
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/KPostMainImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
                 android:scaleType="fitStart"
-                app:srcCompat="@drawable/kp_tab2" />
+                android:src="@drawable/kp_tab2" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="150dp" />
         </LinearLayout>
     </ScrollView>
 
